# irspy

./: .gitignore  README.md  __init__.py  built_in_extensions.py  http_utils.py  importer.py  metrology.py  pyinstaller_build.py  pyproject.toml  requiremence.txt  requirements.txt  revisions.py  settings_ini_parser.py  settings_properties.py  utils.py
clb/: assist_functions.py  calibrator_constants.py  clb_dll.py  network_variables.py
dlls/: ftdi_control.py  ftdi_dll.py  multimeters.py  mxsrlib_dll.py
irspy/: __init__.py  constants.py  pyinstaller_build.py  revisions.py  settings_ini_parser.py  utils.py
irspy/clb/: Calibrator 2.ini  assist_functions.py  calibrator_constants.py  clb_dll.py  network_variables.py
irspy/dlls/: ftdi_control.py  mxsrlib_dll.py
irspy/pokrov/: pokrov_dll.py
irspy/protocol_generator/: data_table.py  protocol_generator.py  protocol_generator_docx.py  protocol_generator_odf.py  protocol_generator_odt.py  protocol_generator_xlsx.py  utils.py
irspy/qt/: qt_settings_ini_parser.py  qt_utils.py  ui_to_py.py
irspy/qt/custom_widgets/: EditListDialog.py  QTableDelegates.py  __init__.py  source_mode_widget.py
irspy/qt/custom_widgets/ui_forms/: dialog_with_text.ui  graph_dialog.ui  source_mode_form.ui  (+3 more)
irspy/qt/resources/: .icons.qrc.kate-swp  icons.py  icons.qrc
irspy/unidriver/: __main__.py  netvar.py  types.py  unidriver.py
irspy/unidriver/gui_test/: __main__.py  pre_run.py  vars.txt  widgets.py
pokrov/: apokrov_dll.so.1.0.0  pokrov_dll.py  pokrov_dll.so.1.0.0
qt/: object_fields_visualizer.py  qt_settings_ini_parser.py  qt_utils.py  test_settings.ini  ui_to_py.py
qt/custom_widgets/: CustomLineEdit.py  EditListDialog.py  QTableDelegates.py  dialog_with_text.py  graph_dialog.py  source_mode_widget.py  tstlan_dialog.py  tstlan_graph_dialog.py  tstlan_widget.py
qt/custom_widgets/ui_forms/: edited_list_widget.ui  hashes.json  ok_cancel_dialog.ui  source_mode_widget.ui  tstlan_dialog.ui  tstlan_widget.ui  tstslan_graphs_dialog.ui
qt/custom_widgets/ui_py/: dialog_with_text.py  edited_list_widget.py  graph_dialog.py  ok_cancel_dialog.py  source_mode_form.py  source_mode_widget.py  tstlan_dialog.py  tstslan_graphs_dialog.py
qt/resources/: hashes.json  icons.py  icons.qrc
scripts/: protocol_example.py  unidriver_example.py  unidriver_tstlan.py
scripts/protocols/: template.docx  template.ods  template.odt  template.xlsx
(+13 files in other folders)
