[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "irspy"
version = "94"
authors = [
  { name="irs ural"},
]
description = "Python library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
qt = [
    "PyQt6"
]

[project.urls]
"Homepage" = "https://github.com/irsural/irspy"
"Bug Tracker" = "https://github.com/irsural/irspy/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}