[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "irspy"
version = "97"
authors = [
  { name="irs ural"},
]
description = "Python library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["mypy"]
qt = [
    "PyQt5",
    "PyQt5-stubs",
    "qt5-tools",
    "qt5-applications",
]

[project.urls]
"Homepage" = "https://github.com/irsural/irspy"
"Bug Tracker" = "https://github.com/irsural/irspy/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
