[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "irspy"
version = "97"
authors = [
  { name="irs ural"},
]
description = "Python library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorama>=0.4.6",
    "pydantic>=2.5.3",
    "pyinstaller>=5.13.2",
    "mypy>=1.4.1",
    "configparser>=5.3.0",
    "odfpy>=1.4.1",
    "openpyxl>=3.0.10",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
pyqt = [
    "PyQt5>=5.15.9",
    "PyQt5-tools>=5.15.9.3.3",
    "PyQt5-stubs>=5.15.6.0",
    "pyqtgraph>=0.12.4",
]

[project.urls]
"Homepage" = "https://github.com/irsural/irspy"
"Bug Tracker" = "https://github.com/irsural/irspy/issues"